apps/nextcloud/deployment.yaml
# Nextcloud is deployed as if it were 'stateless'.
# The database is managed by CNPG, and its file are hosted on a NAS, which the image put an exclusive lock on.
# So there should be no issue with where two pods accidentally write data to the same thing.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
  namespace: nextcloud
  labels:
    app: production
spec:
  selector:
    matchLabels:
      app: production
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: production
    spec:
      volumes:
        - name: piraeus-volume
          persistentVolumeClaim:
            claimName: filestore
      containers:
        - name: app
          image: docker.io/library/nextcloud:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: piraeus-volume
              mountPath: /mnt
