apps/nextcloud/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: production
  namespace: nextcloud
  labels:
    app: production
spec:
  volumes:
    - name: nas-mount
      hostPath:
        path: /mnt/nas/nextcloud
        type: Directory
  containers:
    - name: app
      image: docker.io/library/nextcloud:latest
      imagePullPolicy: Never
      volumeMounts:
        - name: nas-mount
          mountPath: /mnt
