apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: nextcloud
spec:
  type: NodePort
  
  selector:
    app: production
    
  ports:
    # The web server
    - name: server
      port: 6398  # NEXT
      targetPort: 8080
      nodePort: 30000
      protocol: TCP
    # The Prometheus exporter
    - name: exporter
      port: 6399
      targetPort: 9205
      protocol: TCP
