apps/nextcloud/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nextcloud.bamilab.space`) || Host(`nextcloud.local.bamilab.space`)
      kind: Rule
      services:
        - name: service
          port: 6398
